# tunara

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.ui.json  vite.config.ts  vitest.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
Casks/: tunara.rb
docs/: 846-设计-Session-Recovery会话恢复.md  AGENT_DETECTION.md  ARCHITECTURE.md  DEPENDENCY_ADVISORIES.md  DESIGN_SYSTEM.md  GOAL.md  GOAL_STATUS.md  M1_TERMINAL_SSH_PERFORMANCE.md  M2_MARKDOWN_SAFE_EDITING.md  M3_AGENT_EVENT_STORE_SPEC.md  MIGRATION.md  PHASE3_PREVIEW_SOURCE_CONTRACT.md  ROADMAP.md  STATE_AND_PERSISTENCE.md  TERMINAL_SELECTION_COPY.md  TESTING.md  THEME_SHELL_TINTING.md  VISUAL_QA.md  产品规划-功能增删与设计优化.md  实施文档-从零到完整功能.md  实现优化-review.md  实现文档-功能补全.md  测试文档-界面与功能Review.md  设计-DiffPanel分区显示.md  设计-右键菜单与批量启动Agent.md  设计-设置面板修复与增强.md  调研-Conduit终端方案.md  调研-Tunara终端方案.md  调研-三大难点深入.md
homebrew/: conduit.rb  tunara.rb
review/: code-review-2026-06-21.md  conduit-review-fixes.patch  current-review-2026-06-21.md  design-review.md  otty-vs-conduit-sidebar.md  review-fixes-2026-06-21.md
scripts/: agent-timeline-fixture.mjs  benchmark-m0-terminals.sh  benchmark-m1-agent-provider.sh  benchmark-m1-agent-session.sh  benchmark-m1-agent-tui.sh  benchmark-m1-ssh-output.sh  benchmark-m1-terminal-output.sh  benchmark-m2-local-safe-write-linux.sh  benchmark-m2-local-safe-write.sh  benchmark-m2-native-close.sh  benchmark-m2-safe-write.sh  benchmark-m3-agent-timeline.sh  benchmark-ssh-pi-loopback-resume.sh  check-tauri-version-coupling.sh  keep-mac-awake.sh  opencode-resume-probe.sh  pi-resume-probe.sh  remote-aider-resume.sh  remote-claude-resume.sh  smoke-agent-tui.exp  smoke-aider-semantics.sh  smoke-claude-semantics.exp  smoke-codex-semantics.sh  smoke-opencode-semantics.sh  smoke-pi-semantics.sh  stress-m1-terminal-output.sh  summarize-agent-provider.py  summarize-agent-session.py  summarize-agent-tui.py  summarize-aider-semantics.py  summarize-claude-semantics.py  summarize-codex-semantics.py  summarize-opencode-semantics.py  summarize-pi-semantics.py  terminal-output-fixture.mjs  verify-macos-legacy-bundle.sh  verify-macos-release-bundle.sh
src/: main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.dev.json  tauri.conf.json
src-tauri/.cargo/: audit.toml
src-tauri/capabilities/: default.json  desktop.json  preview.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: main.toml  preview.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: agent_event_store.rs  config.rs  mod.rs  preview.rs  util.rs  workspace_store.rs
src-tauri/src/modules/agent/: event.rs  harness.rs  hooks.rs  mod.rs  preflight.rs  tests.rs  wrapper.rs
src-tauri/src/modules/agent/scripts/: agent-hook.sh
src-tauri/src/modules/agent_event_store/: search.rs
src-tauri/src/modules/baseline/: mod.rs
src-tauri/src/modules/editor/: mod.rs
src-tauri/src/modules/fs/: file.rs  grep.rs  mod.rs  mutate.rs  search.rs  tree.rs
src-tauri/src/modules/git/: commit.rs  mod.rs  watcher.rs  workspace.rs
src-tauri/src/modules/process/: error.rs  mod.rs  runner.rs
src-tauri/src/modules/pty/: mod.rs  output_flow.rs  session.rs  shell_init.rs
src-tauri/src/modules/pty/scripts/: bashrc.bash  config.fish  zlogin.zsh  zprofile.zsh  zshenv.zsh  zshrc.zsh
src-tauri/src/modules/resolver/: mod.rs
src-tauri/src/modules/shell/: mod.rs
src-tauri/src/modules/ssh/: auth.rs  connection.rs  flow_control.rs  hosts.rs  known_hosts.rs  m2_safe_write_benchmark.rs  mod.rs  remote_git.rs  rtt_benchmark.rs  safe_write.rs  sftp.rs
src-tauri/src/modules/ssh/safe_write/: tests.rs
src-tauri/src/modules/ssh/scripts/: remote-integration.sh
tests/: agent-event-store-contract.test.mjs  agent-global-activity.test.mjs  agent-lifecycle-source.test.mjs  agent-registry.test.mjs  agent-session-summary.test.mjs  agent-timeline-model.test.mjs  agent-tui-summary.test.mjs  aider-semantics-source.test.mjs  app-shell-layout.test.mjs  breadcrumbs.test.mjs  claude-semantics-source.test.mjs  clipboard.test.mjs  codex-semantics-source.test.mjs  compact-feedback-design.test.mjs  design-accessibility-regressions.test.mjs  destructive-confirm.test.mjs  diff-parse.test.mjs  diff-virtual.test.mjs  dirty-draft-guard.test.mjs  dock-badge-state.test.mjs  editor-draft-registry.test.mjs  editor-scroll-position.test.mjs  elapsed.test.mjs  file-explorer-remote-root.test.mjs  file-explorer-search.test.mjs  file-preview-navigation.test.mjs  focus-trap-policy.test.mjs  git-watch-refcount.test.mjs  grep-group.test.mjs  i18n-core.test.mjs  lifecycle-replay.test.mjs  local-terminal-cwd.test.mjs  m2-safe-write-benchmark-gate.test.mjs  markdown-reader.test.mjs  markdown-syntax.test.mjs  new-terminal-directory.test.mjs  notebook.test.mjs  opencode-semantics-source.test.mjs  persist-snapshot.test.mjs  phase2-editor-surface.test.mjs  (+45 more)
(+332 files in other folders)
