[package]
name = "tunara"
version = "1.16.0"
description = "Tunara — 带智能侧栏的真实终端（基于 Tauri + xterm.js）"
authors = ["Tunara contributors"]
license = "Apache-2.0"
repository = "https://github.com/24kHandsome1201/tunara"
homepage = "https://github.com/24kHandsome1201/tunara"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tunara_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Deterministic, one-shot SSH safe-write failure injection for the isolated M2
# product benchmark. Ordinary dev/release binaries do not compile this module.
m2-safe-write-benchmark = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
toml_edit = "0.25"
portable-pty = "0.9"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
getrandom = "0.3"
log = "0.4"
parking_lot = "0.12"
tokio = { version = "1", features = ["process", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
which = "8"
git2 = { version = "0.19", features = ["vendored-openssl"] } # keep macOS release bundles independent of Homebrew OpenSSL dylibs
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
globset = "0.4"
notify = "6"
notify-debouncer-mini = "0.4"
# SSH client (§ssh-client): russh 0.61 carries key handling in russh::keys
# (the standalone russh-keys crate is legacy). russh-sftp adds the SFTP
# subsystem on a russh channel. Pinned to an exact patch — russh is pre-1.0
# and breaks across 0.x minors; even patch releases have shipped breaking
# changes, so we lock to the reviewed 0.61.2 and bump deliberately.
russh = "=0.61.2"
russh-sftp = "2.3"
# ~/.ssh & known_hosts path resolution (XDG/home dirs).
dirs = "5"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
tauri-plugin-process = "2"
# Native confirm dialogs — window.confirm is a silent no-op in wry's WKWebView.
tauri-plugin-dialog = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSBitmapImageRep", "NSImage", "NSImageRep"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSData", "NSDictionary", "NSError", "NSObject", "NSString"] }
objc2-web-kit = "0.3"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
panic = "abort"
strip = true
